# Goose-Core

./: .gitignore  .pre-commit-config.yaml  .sprint-status  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  VERSION_LOCATIONS.md  goose.yaml.example  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: adr.md  bug_report.md  feature.md  feature_request.md  plugin_submission.md
.github/workflows/: ci.yml  init-wiki.yml  release.yml
NEW MISSION/: 01_master_brief.md  02_forensic_core_architecture_spec.md  03_gui_and_workflow_spec.md  04_plugin_trust_and_tuning_spec.md  05_sprint_plan_and_acceptance_criteria.md
cases/CASE-2026-000001/: case.json
cases/CASE-2026-000002/: case.json
cases/CASE-2026-000003/: case.json
cases/CASE-2026-000004/: case.json
cases/CASE-2026-000005/: case.json
cases/CASE-2026-000006/: case.json
cases/CASE-2026-000007/: case.json
cases/CASE-2026-000008/: case.json
cases/CASE-2026-000009/: case.json
cases/CASE-2026-000010/: case.json
cases/CASE-2026-000011/: case.json
cases/CASE-2026-000012/: case.json
cases/CASE-2026-000013/: case.json
cases/CASE-2026-000014/: case.json
data/: stream_results.db
docs/: PRO_ARCHITECTURE_PLAN.md  PRO_GPS_DENIED_VALIDATION_STRATEGY.md  advanced-usage.md  api-reference.md  cli-reference.md  competitor_analysis.md  faq.md  getting-started.md  px4_reference.md  strategy.md  supported-formats.md  troubleshooting.md
docs/adr/: README.md  (+1 more)
frontend/: package-lock.json  package.json  vite.config.ts
logs/: README.md
scripts/: batch_validate.py  create_issues.py  download_public_logs.py  download_test_logs.py  fetch_px4_logs.py  launch_workers.py  ml_anomaly.py  ml_percentiles.py  ml_train.py  stream_analyze.py  validate_corpus.py
tests/: conftest.py  test_extension_seams.py
web-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+761 files in other folders)
